RESOLVED FIXED157770
ShadowChicken crashes when reading a scope from the frame during a stack overflow exception
https://bugs.webkit.org/show_bug.cgi?id=157770
Summary ShadowChicken crashes when reading a scope from the frame during a stack over...
Saam Barati
Reported 2016-05-16 16:38:10 PDT
We should be taking a stack trace from the stack overflowed callee's caller.
Attachments
patch (5.64 KB, patch)
2016-05-16 19:39 PDT, Saam Barati
fpizlo: review+
patch for landing (6.28 KB, patch)
2016-05-16 20:40 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2016-05-16 19:39:55 PDT
Mark Lam
Comment 2 2016-05-16 20:18:34 PDT
The EWS says that the test is timing out. Maybe you should add a TestExpectation to skip it for debug builds.
Saam Barati
Comment 3 2016-05-16 20:40:39 PDT
Created attachment 279092 [details] patch for landing
WebKit Commit Bot
Comment 4 2016-05-16 22:30:38 PDT
Comment on attachment 279092 [details] patch for landing Clearing flags on attachment: 279092 Committed r200997: <http://trac.webkit.org/changeset/200997>
WebKit Commit Bot
Comment 5 2016-05-16 22:30:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.