LayoutTests/inspector/debugger/resources/stack-overflow.js
@@ -1,0 +1,11 @@
+function foo() {
+    foo();
+}
+
+function start() {
+    try {
+        foo();
+    } catch(e) {
+        10 + 10; 
+    }
+}
